# spcode

./: .gitignore  README.md  main.py  models.yaml  pyproject.toml
docs/: ROADMAP.md  TOOLING_IMPROVEMENT_NOTES.md  WEB_AND_CLI_IMPLEMENTATION_RESEARCH.md
examples/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py
examples/docs/: 工具系统完善清单v1.md
skills/12306-skill/: SKILL.md
skills/Administrator/: SKILL.md
skills/file_edit/: SKILL.md
skills/web_search/: SKILL.md
tests/: test_api_routes.py  test_budget_controller.py  test_chat_service_stream.py  test_cli_chat.py  test_cli_render.py  test_cli_runs.py  test_compaction_pipeline.py  test_core_bash_tools.py  test_core_file_tools.py  test_core_search_tools.py  test_core_web_tools.py  test_example4.py  test_list_dir_tool.py  test_llm_client_streaming.py  test_memory_manager.py  test_memory_store.py  test_model_input_audit.py  test_model_loader.py  test_phase_c_recall_injection.py  test_phase_d_autocompact.py  test_restore_resume.py  test_runtime_bootstrap.py  test_runtime_tool_safety.py  test_skill_load.py  test_task_tools.py  test_tool_search_tool.py  test_tools_skill_mcp.py  test_w3_approval.py  test_w4_parallel.py  test_w5_resume.py
tests/w1_planner/: __init__.py  test_plan_store.py  test_planner_core.py  test_planner_models.py
tests/w2_orchestrator/: __init__.py  test_orchestrator.py  test_orchestrator_models.py  test_step_executor.py
tests/w3_approval/: __init__.py  test_orchestrator_approval.py  test_plan_run_store.py  test_step_executor_approval.py
(+3 files in other folders)
