[project]
name = "agent-leaning"
version = "0.1.0"
description = "A tiny agent loop harness for learning runtime flow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.13",
    "pydantic>=2.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
