[project]
name = "agent-leaning"
version = "0.1.0"
description = "A tiny agent loop harness for learning runtime flow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.13",
    "pydantic>=2.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
    # CLI
    "typer>=0.12,<1",
    "rich>=13,<15",
    # API server
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sse-starlette>=2.1,<3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[project.scripts]
agent = "packages.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages"]
